@@ -779,7 +779,9 @@ char	*comment;
 				istat.is_oper--;
 
                         sendto_common_channels(sptr, ":%s QUIT :%s",
-                                               sptr->name, comment);
+						sptr->name,
+						check_triggers(sptr, comment) ?
+						"Spam is discarded" : comment);
 
 			if (!(acptr = cptr ? cptr : sptr->from))
 				acptr = sptr;
