@@ -3,8 +3,18 @@
 Версия 2.0
 --------------
 2011-09-20 erra <erra@ya.ru>
+	* common/support.c, common/support_ext.h: добавлена функция cstrip()
+			для удаления расцветок перед проверкой сообщения
+			на спам
+	* ircd/channel.c: вызов check_spam добавлен в m_part()
+	* ircd/s_debug.c: STRIP_COLORS выводится как 'b' в server_opts
 	* ircd/s_err.c: исправлен формат RPL_STATSTRIGGER
+	* ircd/s_misc.c: вызов check_spam() добавлен в exit_one_client
 	* ircd/s_serv.c: исправлен вывод /stats T
+	* ircd/s_user.c: добавлена функция check_spam() для вызова из
+			m_message, m_part и exit_one_client
+	* support/config.h.dist: добавлен параметр сборки STRIP_COLORS,
+			по умолчанию включен
 
 2011-09-20 erra <erra@ya.ru>
 	* ircd/s_serv.c: исправлены m_trigger/m_untrigger на предмет
